@@ -138,3 +138,61 @@ demangle_type handle_demangle_option(string const & option)
 
 	throw op_runtime_error("invalid option --demangle=" + option);
 }
+
+merge_option handle_merge_option(vector<string> const & mergespec,
+    bool allow_lib, bool exclude_dependent)
+{
+	using namespace options;
+	merge_option merge_by;
+
+	merge_by.cpu = false;
+	merge_by.lib = false;
+	merge_by.tid = false;
+	merge_by.tgid = false;
+	merge_by.unitmask = false;
+
+	if (!allow_lib)
+		merge_by.lib = true;
+
+	bool is_all = false;
+
+	vector<string>::const_iterator cit = mergespec.begin();
+	vector<string>::const_iterator end = mergespec.end();
+
+	for (; cit != end; ++cit) {
+		if (*cit == "cpu") {
+			merge_by.cpu = true;
+		} else if (*cit == "tid") {
+			merge_by.tid = true;
+		} else if (*cit == "tgid") {
+			// PP:5.21 tgid merge imply tid merging.
+			merge_by.tgid = true;
+			merge_by.tid = true;
+		} else if (*cit == "lib" && allow_lib) {
+			merge_by.lib = true;
+		} else if (*cit == "unitmask") {
+			merge_by.unitmask = true;
+		} else if (*cit == "all") {
+			merge_by.cpu = true;
+			merge_by.lib = true;
+			merge_by.tid = true;
+			merge_by.tgid = true;
+			merge_by.unitmask = true;
+			is_all = true;
+		} else {
+			cerr << "unknown merge option: " << *cit << endl;
+			exit(EXIT_FAILURE);
+		}
+	}
+
+	// if --merge all, don't warn about lib merging,
+	// it's not user friendly. Behaviour should still
+	// be correct.
+	if (exclude_dependent && merge_by.lib && !is_all) {
+		cerr << "--merge=lib is meaningless "
+		     << "with --exclude-dependent" << endl;
+		exit(EXIT_FAILURE);
+	}
+
+	return merge_by;
+}
